<resources>
    <string name="app_name">Roi Barbu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="BoutonEcranDemarrage">Jouer !</string>
    <string name="title_activity_entree_des_noms">Entrez les noms des participants</string>
    <string name="nomJoueur0">Joueur 1</string>
    <string name="nomJoueur1">Joueur 2</string>
    <string name="nomJoueur2">Joueur 3</string>
    <string name="nomJoueur3">Joueur 4</string>
    <string name="boutonEntreeNoms">Commencer la partie</string>
    <string name="TitreEcranDemarrage">Compteur de points \nRoi Barbu</string>
    <string name="title_activity_affichage_ordre">Ordre de jeu</string>
    <string name="title_activity_contrats_joueur1">Choix contrat</string>
    <string name="boutonOrdreDeJeu">Commencer</string>
    <string name="joueurXpourFragment">Joueur #</string>
    <string name="scoreVide">\t:\t\t00\t\t\t</string>
    <string name="BoutonRoiCoeur">Sans roi de coeur</string>
    <string name="BoutonDames">Sans dames\n</string>
    <string name="BoutonCoeurs">Sans coeurs</string>
    <string name="BoutonPlis">Sans plis</string>
    <string name="title_activity_entree_des_scores">Entrée des scores</string>
    <string name="BoutonFinir">ok</string>
    <string name="Plus5">+</string>
    <string name="Moins5">-</string>
    <string name="zerozero">00</string>
    <string name="AfficheScoreJ1">Joueur 1 : 00 +</string>
    <string name="AfficheScoreJ2">Joueur 2 : 00 +</string>
    <string name="AfficheScoreJ3">Joueur 3 : 00 +</string>
    <string name="AfficheScoreJ4">Joueur 4 : 00 +</string>
    <string name="REUSSITE">REUSSITE</string>
    <string name="title_activity_scores_reussite">Réussite</string>
    <string name="Salade">Salade</string>
    <string name="moins20">- 20</string>
    <string name="moins40">- 40</string>
    <string name="title_activity_scores_salade">Salade</string>
    <string name="zero">0</string>
    <string name="Coeurs">Coeurs</string>
    <string name="Dames">Dames</string>
    <string name="Plis">Plis</string>
    <string name="Roi">Roi</string>
    <string name="title_activity_fin">Résultats</string>
    <string name="prems">1er</string>
    <string name="deus">2nd</string>
    <string name="troisieme">3ième</string>
    <string name="quatrieme">4ième</string>

</resources>
