<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.meteoverview.roibarbu.AffichageOrdre"
    android:background="#006699">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nomJoueur0"
        android:id="@+id/afficheJoueur1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nomJoueur1"
        android:id="@+id/afficheJoueur2"
        android:layout_below="@+id/afficheJoueur1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nomJoueur2"
        android:id="@+id/afficheJoueur3"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/afficheJoueur2"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nomJoueur3"
        android:id="@+id/afficheJoueur4"
        android:layout_below="@+id/afficheJoueur3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BoutonAffichage"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/afficheJoueur4"
        android:layout_centerHorizontal="true"
        android:text="@string/boutonOrdreDeJeu"
        android:onClick="queLeJeuCommence" />
</RelativeLayout>
