<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.meteoverview.roibarbu.EntreeDesNoms"
    android:background="#006699"
    android:id="@+id/layoutEntree">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nomJoueur0"
            android:ems="10"
            android:id="@+id/entreeJoueur0"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nomJoueur1"
            android:ems="10"
            android:id="@+id/entreeJoueur1"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nomJoueur2"
            android:ems="10"
            android:id="@+id/entreeJoueur2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nomJoueur3"
            android:ems="10"
            android:id="@+id/entreeJoueur3"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:layout_marginTop="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonEntreeNoms"
            android:id="@+id/boutonEntreeNoms"
            android:layout_gravity="center_horizontal"
            android:onClick="commencerPartie"
            android:singleLine="true"
            android:layout_marginTop="50dp" />
    </LinearLayout>
</RelativeLayout>
