<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.meteoverview.roibarbu.ScoresReussite"
    android:background="#006699">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BoutonFinir"
        android:id="@+id/BoutonFinirReussite"
        android:layout_marginBottom="105dp"
        android:width="125dp"
        android:height="55dp"
        android:onClick="finir"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AfficheScoreJ1"
            android:id="@+id/ScoreJ1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins40"
            android:id="@+id/b40J1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:height="55dp"
            android:onClick="bouton40J1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins20"
            android:id="@+id/b20J1"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="10dp"
            android:height="55dp"
            android:onClick="bouton20J1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AfficheScoreJ1"
            android:id="@+id/ScoreJ2"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins40"
            android:id="@+id/b40J2"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:height="55dp"
            android:onClick="bouton40J2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins20"
            android:id="@+id/b20J2"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="10dp"
            android:height="55dp"
            android:onClick="bouton20J2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AfficheScoreJ1"
            android:id="@+id/ScoreJ3"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins40"
            android:id="@+id/b40J3"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:height="55dp"
            android:onClick="bouton40J3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins20"
            android:id="@+id/b20J3"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="10dp"
            android:height="55dp"
            android:onClick="bouton20J3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AfficheScoreJ1"
            android:id="@+id/ScoreJ4"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins40"
            android:id="@+id/b40J4"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:height="55dp"
            android:onClick="bouton40J4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins20"
            android:id="@+id/b20J4"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_margin="10dp"
            android:height="55dp"
            android:onClick="bouton20J4" />
    </GridLayout>

</RelativeLayout>
